--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb+srv://LidarAdmin:OhzxPQN1fYv9bOab@cluster0.it5nseh.mongodb.net/LidarFitPro?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=
 
 JWT_SECRET=your_jwt_secret_here
 MPESA_CONSUMER_KEY=
