--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ NODE_ENV=development
 PORT=5000
 MONGODB_URI=
 
-JWT_SECRET=your_jwt_secret_here
+JWT_SECRET=
 MPESA_CONSUMER_KEY=
 MPESA_CONSUMER_SECRET=
