Refactor code structure for improved readability and maintainability

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lidarfit-frontend",
   "version": "1.0.0",
+  "type": "module",
   "description": "LidarFit Pro Gym Management System - Frontend React App",
   "private": true,
   "dependencies": {
